# llm-graph

./: README.md  pyproject.toml  random_test.py
llm_graph/ChatModels/: ChatopenAI.py  chatGroq.py
llm_graph/messages/: __init__.py  ai.py  base.py  human.py
tests/: test_chatOpenAI.py
tests/ChatModules/: test_chatGroq.py  test_chatOpenAI.py
tests/Message/: test_messages.py
